fix: Fixed font coming out of the box, devspace img not aligned at a particular res, updated fallacies description

--- a/Website/style.css
+++ b/Website/style.css
@@ -269,7 +269,11 @@ hr.separator {
 {
     width: 1170px;    
 }
-
+.devspaceimg{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .content-1170 img
 {
     max-width: 100%;
@@ -1403,11 +1407,11 @@ footer
 
     .section-title-holder h2
     {
-        font-size: 80px;
+        font-size: 47px;
         width: 177px;        
         line-height: 66px;
         margin-top: 25px;        
-        margin-left: 75px; 
+        margin-left: 25px; 
     }
 
     .section-content-holder.right 
